--- a/src/main/resources/templates/mail/demo.html
+++ b/src/main/resources/templates/mail/demo.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <!--测试发邮件 与 MailTests.java 对应-->
-    <p>欢迎，大帅比: <span style="color: red;" th:text="${username}"></span></p>
+    <p>欢迎您: <span style="color: red;" th:text="${username}"></span></p>
 </body>
 </html>
