--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           crossorigin="anonymous">
+    <!--配置静态资源的路径-->
     <link rel="stylesheet" th:href="@{/css/global.css}"/>
     <link rel="stylesheet" th:href="@{/css/login.css}"/>
     <title>牛客网-账号设置</title>
@@ -26,7 +27,7 @@
                     <label for="head-image" class="col-sm-2 col-form-label text-right">选择头像:</label>
                     <div class="col-sm-10">
                         <div class="custom-file">
-                            <input type="file" th:class="|custom-file-input ${error!=null ? is-invalid : ''}|"
+                            <input type="file" th:class="|custom-file-input ${error!=null ? 'is-invalid':''}|"
                                    id="head-image" name="headerImage" lang="es" required="">
                             <label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>
                             <div class="invalid-feedback" th:text="${error}">
@@ -44,13 +45,13 @@
             </form>
             <!-- 修改密码 -->
             <h6 class="text-left text-info border-bottom pb-2 mt-5">修改密码</h6>
-            <form class="mt-5" id="forgetForm">
+            <form class="mt-5" method="post" th:action="@{/user/updatePassword}">
                 <div class="form-group row mt-4">
                     <label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="old-password" name="oldPassword"
-                               placeholder="请输入原始密码!" required>
-                        <div class="invalid-feedback">
+                        <input type="password" th:class="|form-control ${oldPasswordMsg!=null?'is-invalid':''}|" name="oldPassword"
+                               id="old-password" th:value="${param.oldPassword}" placeholder="请输入原始密码!" required>
+                        <div class="invalid-feedback" th:text="${oldPasswordMsg}">
                             密码长度不能小于8位!
                         </div>
                     </div>
@@ -58,9 +59,9 @@
                 <div class="form-group row mt-4">
                     <label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="new-password" name="newPassword"
-                               placeholder="请输入新的密码!" required>
-                        <div class="invalid-feedback">
+                        <input type="password" th:class="|form-control ${newPasswordMsg!=null?'is-invalid':''}|" name="newPassword"
+                               id="new-password" th:value="${param.newPassword}" placeholder="请输入新的密码!" required>
+                        <div class="invalid-feedback" th:text="${newPasswordMsg}">
                             密码长度不能小于8位!
                         </div>
                     </div>
@@ -68,9 +69,9 @@
                 <div class="form-group row mt-4">
                     <label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="confirm-password" placeholder="再次输入新密码!"
-                               required>
-                        <div class="invalid-feedback">
+                        <input type="password" th:class="|form-control ${confirmPasswordMsg!=null?'is-invalid':''}|" name="confirmPassword"
+                               id="confirm-password" th:value="${param.confirmPassword}" placeholder="再次输入新密码!" required>
+                        <div class="invalid-feedback" th:text="${confirmPasswordMsg}">
                             两次输入的密码不一致!
                         </div>
                     </div>
