--- a/src/main/resources/templates/site/notice.html
+++ b/src/main/resources/templates/site/notice.html
@@ -40,7 +40,7 @@
             <ul class="list-unstyled">
                 <!-- 1 评论类通知-->
                 <li class="media pb-3 pt-3 mb-3 border-bottom position-relative"
-                    th:if="${commentNotice!=null && commentNotice.size!=0 && commentNotice.message!=null}">
+                    th:if="${commentNotice!=null}">
                     <span class="badge badge-danger"
                           th:text="${commentNotice.unread!=0?commentNotice.unread:''}">3</span>
                     <img src="http://static.nowcoder.com/images/head/reply.png" class="mr-4 user-header" alt="通知图标">
@@ -67,7 +67,7 @@
                 </li>
                 <!-- 2 点赞类通知-->
                 <li class="media pb-3 pt-3 mb-3 border-bottom position-relative"
-                    th:if="${likeNotice!=null && likeNotice.size!= 0 && likeNotice.message!=null}">
+                    th:if="${likeNotice!=null}">
                     <span class="badge badge-danger" th:text="${likeNotice.unread!=0?likeNotice.unread:''}">3</span>
                     <img src="http://static.nowcoder.com/images/head/like.png" class="mr-4 user-header" alt="通知图标">
                     <div class="media-body">
@@ -93,7 +93,7 @@
                 </li>
                 <!-- 3 关注类通知-->
                 <li class="media pb-3 pt-3 mb-3 border-bottom position-relative"
-                    th:if="${followNotice!=null && followNotice.size!= 0 && followNotice.message!=null}">
+                    th:if="${followNotice!=null}">
 						<span class="badge badge-danger" th:text="${followNotice.unread!=0?followNotice.unread:''}">3</span>
                     <img src="http://static.nowcoder.com/images/head/follow.png" class="mr-4 user-header" alt="通知图标">
                     <div class="media-body">
