--- a/src/main/resources/templates/site/search.html
+++ b/src/main/resources/templates/site/search.html
@@ -70,7 +70,7 @@
             <!-- 帖子列表 -->
             <ul class="list-unstyled mt-4">
                 <li class="media pb-3 pt-3 mb-3 border-bottom" th:each="map:${discussPosts}">
-                    <img src="http://images.nowcoder.com/head/1t.png" th:src="${map.user.headerUrl}"
+                    <img th:src="${map.user.headerUrl}"
                          class="mr-4 rounded-circle" alt="用户头像" style="width:50px;height:50px;">
                     <div class="media-body">
                         <h6 class="mt-0 mb-3">
